[package]
name = "duration_utils"
version = "0.1.0"
authors = ["Muhammad Ragib Hasin <ragib.hasin@gmail.com>"]
edition = "2018"
description = 'Some useful utility functions for std::time::Duration'
license = 'MIT OR Apache-2.0'
readme = 'README.md'

[dependencies]
serde = { version = '1.0.118', features = ['derive'] }
serde_with = { version = '1.6.0', optional = true }
chrono = { version = '0.4.19', optional = true }
regex = '1.4.2'

[dev-dependencies]
serde_json = '1.0'
